--- a/src/components/EachBookCard/card.css
+++ b/src/components/EachBookCard/card.css
@@ -2,6 +2,8 @@
   width: 95%;
   height:max-content;
   margin: 30px ;
+  display: flex;
+  justify-content: space-between;
   padding: 15px;
   border-radius: 4px;
   background-color: #fff;
