--- a/src/components/EachBookCard/progress.css
+++ b/src/components/EachBookCard/progress.css
@@ -1,3 +1,15 @@
 .progress-section {
  display: flex;
+ gap: 10px;
+}
+
+.status {
+  opacity: 0.5;
+  font-family: Montserrat;
+  font-size: 0.875rem;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
 }
