--- a/src/components/EachBookCard/progress.css
+++ b/src/components/EachBookCard/progress.css
@@ -13,3 +13,19 @@
   line-height: normal;
   letter-spacing: normal;
 }
+
+.percent {
+ font-family: Montserrat;
+  font-size: 1.5rem;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+}
+
+.chapter {
+ display: flex;
+ flex-direction: column;
+ gap: 5px;
+}
