--- a/src/components/EachBookCard/card.css
+++ b/src/components/EachBookCard/card.css
@@ -1,7 +1,7 @@
 .card {
   width: 95%;
-  height:max-content;
-  margin: 30px ;
+  height: max-content;
+  margin: 30px;
   display: flex;
   justify-content: space-between;
   padding: 15px;
@@ -11,7 +11,7 @@
 
 .cartegory-select {
   text-decoration: none;
-  font-family: Montserrat;
+  font-family: Montserrat, sans-serif;
   font-size: 0.813rem;
   font-weight: normal;
   letter-spacing: 1.9px;
@@ -19,7 +19,7 @@
 }
 
 .heading-one {
-  font-family: RobotoSlab;
+  font-family: RobotoSlab, monospace;
   font-size: 1.375rem;
   font-weight: bold;
   font-stretch: normal;
@@ -30,7 +30,7 @@
 }
 
 .author-card {
-  font-family: RobotoSlab;
+  font-family: RobotoSlab, monospace;
   font-size: 0.875rem;
   font-weight: 300;
   font-stretch: normal;
@@ -41,8 +41,8 @@
 }
 
 .no-outline {
- border: none;
- font-family: RobotoSlab;
+  border: none;
+  font-family: RobotoSlab, monospace;
   font-size: 0.875rem;
   font-weight: 300;
   font-stretch: normal;
@@ -55,5 +55,5 @@
 
 .button {
   display: flex;
- gap: 10px;
+  gap: 10px;
 }
