--- a/src/components/AddBookForm/form.css
+++ b/src/components/AddBookForm/form.css
@@ -1,28 +1,28 @@
 .form-heading {
- margin-left: 40px;
- font-family: Montserrat;
+  margin-left: 40px;
+  font-family: Montserrat, sans-serif;
   font-size: 1.25rem;
   font-weight: bold;
   font-stretch: normal;
   font-style: normal;
   line-height: normal;
   letter-spacing: -0.18px;
-  color: #888888;
+  color: #888;
 }
 
 #title {
- width: 33%;
- height: 35px;
-   padding: 5px;
+  width: 33%;
+  height: 35px;
+  padding: 5px;
   border-radius: 4px;
   border: solid 1px #ffff;
   background-color: #ffff;
- }
- 
- #author {
+}
+
+#author {
   width: 33%;
   padding: 5px;
-   height: 35px;
+  height: 35px;
   border-radius: 4px;
   border: solid 1px #ffff;
   background-color: #ffff;
@@ -30,16 +30,16 @@
 
 #select {
   height: 35px;
- border-radius: 4px;
+  border-radius: 4px;
   border: solid 1px #ffff;
   background-color: #ffff;
 }
 
 form {
- width: 95%;
- margin: 5px 40px;
- display: flex;
- gap: 3%;
+  width: 95%;
+  margin: 5px 40px;
+  display: flex;
+  gap: 3%;
 }
 
 .add-btn {
@@ -51,9 +51,10 @@ form {
   width: max-content;
   background-color: #0290ff;
   color: #ffff;
- }
+}
 
- #title:focus, #author:focus{
+#title:focus,
+#author:focus {
   outline: none;
   padding: 5px;
- }
+}
