--- a/src/components/AddBookForm/form.css
+++ b/src/components/AddBookForm/form.css
@@ -36,7 +36,7 @@
 }
 
 form {
-  width: 95%;
+  width: 90%;
   margin: 5px 40px;
   display: flex;
   gap: 3%;
@@ -48,7 +48,7 @@ form {
   border: none;
   cursor: pointer;
   border-radius: 3px;
-  width: max-content;
+  width: 120px;
   background-color: #0290ff;
   color: #ffff;
 }
